# pdf-ocr-ai

./: .gitignore  .openspec  README.md  README_FR.md  TODO.md  conftest.py  pdf_ocr_lmstudio.py  pyproject.toml  requirements.txt
.qwen/: PROJECT_SUMMARY.md
openspec/: project.md
openspec/changes/archive/2025-11-18-extend-ocr-to-multiple-ai-providers/: proposal.md  tasks.md
openspec/changes/archive/2025-11-18-ocr-lmstudio-pdf/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-18-progress-tracking/: design.md  proposal.md  tasks.md
openspec/changes/archive/convert-to-uv/: design.md  proposal.md
openspec/changes/archive/convert-to-uv/specs/venv-management/: spec.md
openspec/changes/archive/convert-to-uv/specs/venv-transition/: spec.md
openspec/changes/archive/make-importable-module/: proposal.md  tasks.md
openspec/changes/convert-to-uv/: tasks.md
openspec/changes/convert-to-uv/specs/distribution-methods/: spec.md
openspec/changes/convert-to-uv/specs/documentation/: spec.md
openspec/changes/convert-to-uv/specs/package-structure/: spec.md
openspec/changes/extend-ocr-to-multiple-ai-providers/: design.md  proposal.md
openspec/changes/extend-ocr-to-multiple-ai-providers/specs/multi-provider-ai-integration/: spec.md
openspec/specs/multi-provider-ai-integration/: spec.md
openspec/specs/ocr-lmstudio-pdf/: spec.md
openspec/specs/ocr-processing/: spec.md
openspec/specs/progress-tracking/: spec.md
src/pdf_ocr_ai/: __init__.py  main.py  providers.py  test_implementation.py  test_security.py
src/pdf_ocr_lmstudio/: __init__.py
tests/: test_main.py
