[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ocr-ai"
version = "1.0.0"
description = "Convert PDF documents to Markdown using OCR capabilities powered by multiple AI providers (LM Studio, Ollama, llama.cpp)"
readme = "README.md"
authors = [
    {name = "LaurentVV"}
]
maintainers = [
    {name = "LaurentVV"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
keywords = ["pdf", "ocr", "markdown", "ai", "qwen", "vision", "lm-studio", "ollama", "llama.cpp"]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.50.0",
    "PyMuPDF>=1.23.0",
    "tqdm>=4.66.0"
]

[project.urls]
Homepage = "https://github.com/laurentvv/pdf-ocr-ai"
Repository = "https://github.com/laurentvv/pdf-ocr-ai"

[project.scripts]
pdf-ocr-ai = "pdf_ocr_ai.main:main"
pdf-ocr-lmstudio = "pdf_ocr_ai.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf_ocr_ai*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest-cov>=4.0.0",
]